fix: Fix for wrong requirement matching